syntax = "proto3";

package zircon.rpc.twirp;
option go_package = "zircon/rpc/twirp";

service MetadataCache {
    rpc NewEntry (MetadataCache_NewEntry) returns (MetadataCache_NewEntry_Result);
    rpc ReadEntry (MetadataCache_ReadEntry) returns (MetadataCache_ReadEntry_Result);
    rpc UpdateEntry (MetadataCache_UpdateEntry) returns (MetadataCache_UpdateEntry_Result);
    rpc DeleteEntry (MetadataCache_DeleteEntry) returns (MetadataCache_DeleteEntry_Result);
}

message MetadataCache_NewEntry {
    // nothing
}

message MetadataCache_NewEntry_Result {
    uint64 chunk = 1;
}

message MetadataCache_ReadEntry {
    uint64 chunk = 1;
}

message MetadataCache_ReadEntry_Result {
    MetadataEntry entry = 1;
}

message MetadataCache_UpdateEntry {
    uint64 chunk = 1;
    MetadataEntry entry = 2;
}

message MetadataCache_UpdateEntry_Result {
    // nothing
}

message MetadataCache_DeleteEntry {
    uint64 chunk = 1;
}

message MetadataCache_DeleteEntry_Result {
    // nothing
}

message MetadataEntry {
    uint64 version = 1;
    repeated uint32 serverIDs = 2;
}
